--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 - name: Home
-  link: /
+  link: /blog.github.io/
 - name: About
-  link: /about.html
+  link: /blog.github.io/about.html
 - name: Blog
-  link: /blog.html
+  link: /blog.github.io/blog.html
 - name: Staff
-  link: /staff.html
+  link: /blog.github.io/staff.html
